--- a/index.html
+++ b/index.html
@@ -17,196 +17,180 @@
 
 <body class="wrap">
 
-	<nav class="navmenu">
-		<ul class="menu">
-			<li class="menuitem"><a href="#">Produkter</a>
-				<ul class="dropdown">
-					<li><a class="sub" href="#">Bagning</a></li>
-					<li><a class="sub" href="#">Dressing & saucer</a></li>
-					<li><a class="sub" href="#">Drikkevarer</a></li>
-					<li><a class="sub" href="#">Fond</a></li>
-					<li><a class="sub" href="#">Frost</a></li>
-					<li><a class="sub" href="#">Glutenfri</a></li>
-					<li><a class="sub" href="#">Kolonial</a></li>
-					<li><a class="sub" href="#">Konserves</a></li>
-					<li><a class="sub" href="#">Krydderier</a></li>
-					<li><a class="sub" href="#">Olie & eddike</a></li>
-				</ul>
-			</li>
-		</ul>
 
-		<ul class="menu">
-			<li class="menuitem"><a href="#">Opskrifter</a>
-				<ul class="dropdown">
-					<li><a class="sub" href="#">Familiefavoritter</a></li>
-					<li><a class="sub" href="#">Italiensk</a></li>
-					<li><a class="sub" href="#">Mexikansk</a></li>
-					<li><a class="sub" href="#">Mad på 30 min</a></li>
-					<li><a class="sub" href="#">Special kost</a></li>
-					<li><a class="sub" href="#">Sæson</a></li>
-					<li><a class="sub" href="#">Vegatarisk</a></li>
-					<li><a class="sub" href="#">Oesten</a></li>
-				</ul>
-			</li>
-		</ul>
+<header>
+	<div class="menu">
 
-		<ul class="menu">
-			<li class="menuitem"><a href="#">Anledning</a>
-				<ul class="dropdown">
-					<li><a class="sub" href="#">Morgenmad</a></li>
-					<li><a class="sub" href="#">Frokost</a></li>
-					<li><a class="sub" href="#">Aftensmad</a></li>
-					<li><a class="sub" href="#">Dessert</a></li>
-					<li><a class="sub" href="#">Gaester</a></li>
-				</ul>
-			</li>
-		</ul>
+	<div class="dropdown">
+		<button class="dropbtn">Produkter</button>
+		<div class="dropdown-content">
+			<a href="#">bagning</a>
+			<a href="#">Dressing & saucer</a>
+			<a href="#">Drikkevarer</a>
+			<a href="#">Fond</a>
+			<a href="#">Frost</a>
+			<a href="#">Glutenfri</a>
+		</div>
+	</div>
 
-		<ul class="menu">
-			<li class="menuitem"><a href="#">Madkursus</a>
-				<ul class="dropdown">
-					<li><a class="sub" href="#">Kursuskalender</a></li>
-					<li><a class="sub" href="#">Madlavningskursus</a></li>
-					<li><a class="sub" href="#">Online Madlavningskursus</a></li>
-				</ul>
-			</li>
-		</ul>
+	<div class="dropdown2">
+		<button class="dropbtn2">Opskrifter</button>
+		<div class="dropdown-content">
+			<a href="#">bagning</a>
+			<a href="#">Dressing & saucer</a>
+			<a href="#">Drikkevarer</a>
+			<a href="#">Fond</a>
+			<a href="#">Frost</a>
+			<a href="#">Glutenfri</a>
+		</div>
+	</div>
 
-		<ul class="menu">
-			<li class="menuitem"><a href="#">Baeredygtighed</a>
-				<ul class="dropdown">
-					<li><a class="sub" href="#">Biodiversitet</a></li>
-					<li><a class="sub" href="#">Inspirerende innovationer</a></li>
-					<li><a class="sub" href="#">Klima</a></li>
-					<li><a class="sub" href="#">Oekologi</a></li>
-				</ul>
-			</li>
-		</ul>
+	<div class="dropdown3">
+		<button class="dropbtn3">Anledning</button>
+		<div class="dropdown-content">
+			<a href="#">bagning</a>
+			<a href="#">Dressing & saucer</a>
+			<a href="#">Drikkevarer</a>
+			<a href="#">Fond</a>
+			<a href="#">Frost</a>
+			<a href="#">Glutenfri</a>
+		</div>
+	</div>
 
-		<ul class="menu">
-			<li class="menuitem"><a href="#">Om Urtekram</a>
-				<ul class="dropdown">
-					<li><a class="sub" href="#">Om os</a></li>
+	<div class="dropdown4">
+		<button class="dropbtn4">Madkursus</button>
+		<div class="dropdown-content">
+			<a href="#">bagning</a>
+			<a href="#">Dressing & saucer</a>
+			<a href="#">Drikkevarer</a>
+			<a href="#">Fond</a>
+			<a href="#">Frost</a>
+			<a href="#">Glutenfri</a>
+		</div>
+	</div>
 
-				</ul>
-			</li>
-		</ul>
+	<div class="dropdown5">
+		<button class="dropbtn5">Bæredygtighed</button>
+		<div class="dropdown-content">
+			<a href="#">bagning</a>
+			<a href="#">Dressing & saucer</a>
+			<a href="#">Drikkevarer</a>
+			<a href="#">Fond</a>
+			<a href="#">Frost</a>
+			<a href="#">Glutenfri</a>
+		</div>
+	</div>
+
+	<div class="dropdown6">
+		<button class="dropbtn6">Om Urtekram</button>
+		<div class="dropdown-content">
+			<a href="#">bagning</a>
+			<a href="#">Dressing & saucer</a>
+			<a href="#">Drikkevarer</a>
+			<a href="#">Fond</a>
+			<a href="#">Frost</a>
+			<a href="#">Glutenfri</a>
+		</div>
+	</div>
+		</div>
 
 
+</header>
+
+<!-- menupunkter -->
+
+
+
+
+<!-- burgermenu -->
+<!--
 		<div class="burgermenu">
-			<input id="dropdown" class="Tryk" type="checkbox">
+			<input id="dropdown" class="Tryk">
 			<label for="dropdown" class="dropdownnavbar"> ☰ </label>
 		</div>
-
-			<div class="navbaren">
-			</div>
-
-				<form class="search">
-					<input type="text" name="search" placeholder="Søg">
-				</form>
-</nav>
+-->
 
 
 
-
-
-
+<!-- logo -->
 		<div class="logotop">
 			<a href="http://www.urtekram.msfh.dk">
-				<img src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine" id="toplogo"></a>
+				<img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
 		</div>
-		<aside class="ikon">
-			<a href=".html"> <img src="image/Produktmockupforside.JPG" alt="Mockup" id="Mockup"></a>
-			<img src="image/mineopskrifter.svg" alt="Mine opskrifter" id="Mine">
-		</aside>
+
+<!-- login-ikon -->
+		<img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
+			<div id="blaa"></div>
+				<div id="hvid"></div>
 
 
+<!-- Emballagebillede -->
+			<a href=".html"> <img src="image/produktmuckupforside.jpg" alt="Mockup" id="Mockup"></a>
 
 
-	<header class="top">
-
-
-
-	</header>
-
-	<section class="blaa">
-	</section>
-	<section class="Emballage">
-	</section>
-	<img src="image/produktforside.jpg" alt="Ny Emballage" id="Nyt">
+<!-- Artikel -->
 	<article id="Fettuccine">
 		<h2>Vi har fået ny emballage</h2>
 		<p>Stadig det samme gode produkt.</p>
 	</article>
 
-
-
-
-
+<!-- Kogebog -->
 	<section class="a">
 		<article class="Minbog">
-
-			<h2> Design din egen kogebog
-			</h2>
+			<h2> Design din egen kogebog</h2>
 			<picture>
 				<img src="image/Minkogebog.JPG" alt="Kogebog" id="Kogebog">
 			</picture>
-			<p>
+			<p id="para">
 				og VIND et aars forbrug af Urtekrams Fettuccine<br><br>
 				<button class="deltag">Deltag her</button>
 			</p>
-
 		</article>
 	</section>
 
-
+<!-- Glutenfri pastakursus -->
 	<section class="Glutenfri">
 
 		<h2> Glutenfri pastakursus </h2>
-		<picture>
-			<source srcset="image/" media="(min-width: 700px)">
-			<img src="image/" alt="Tilmeld dig allerede i dag" id="kursus">
-		</picture>
-
-		<button onclick="location.href='Glutenfri.html'" type="button" class="cta">Tilmeld dig her</button>
 	</section>
 
 
-
+<!-- Familiefavoritter -->
 	<article class="nyheder">
 		<h2> Familiefavoritter</h2>
-		<div class="boxing">
 
+		<!-- Aeggekage laks -->
 			<div class="teaser">
 				<article class="beskrivelse">
 					<picture>
-						<img src="image/Medlaks.jpg" alt="Opskrift på aeggekage" class="kortbillede">
+						<a href="#"><img id="laks" src="image/Aeggekagelaks.png" alt="Opskrift på aeggekage"></img></a>
 					</picture>
-
-					<h4>Aeggekage med laks</h4>
+					<h4 id="teasertekst2">Æggekage med laks</h4>
 				</article>
 				<article class="Opskrift">
-					<h5> Få opskriften her </h5>
+					<h5 id="her"> Få opskriften her </h5>
 				</article>
 			</div>
 
+		<!-- Pasta Alfredo -->
 			<div class="teaser">
 				<article class="beskrivelse">
 					<picture>
-						<img src="image/PastaAlfredo.jpg" alt="Pasta Alfredo" class="kortbillede">
+					<a href="#"><img id="alfredo" src="image/PastaAlfredo.jpg" alt="Pasta Alfredo"></a>
 					</picture>
-					<h4>Pasta Alfredo</h4>
+					<h4 id="teasertekst1">Pasta Alfredo</h4>
 				</article>
 				<article class="Opskrift">
 					<h5> Få opskriften her</h5>
 				</article>
 			</div>
 
+			<!-- Pasta med laks -->
 			<div class="teaser">
 				<article class="beskrivelse">
 					<picture>
 
-						<img src="image/Pastamedlaks.jpg" alt="Pasta med laks" class="kortbillede">
+						<img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks" class="kortbillede">
 					</picture>
 					<h4>Pasta med laks</h4>
 				</article>
@@ -214,41 +198,12 @@
 					<h5> Få opskriften her</h5>
 				</article>
 			</div>
-
-			<div class="teaser">
-				<article class="beskrivelse">
-					<picture>
-						<img src="image/Medlaks.jpg" alt="Aeggekage" class="kortbillede">
-					</picture>
-					<h4></h4>
-				</article>
-				<article class="Opskrift">
-					<h5> Få opskriften her </h5>
-				</article>
-
-			</div>
-
-			<div class="teaser" id="sidste">
-				<article class="beskrivelse">
-
-					<h4></h4>
-				</article>
-				<article class="Opskrift">
-					<h5> Få opskriften her</h5>
-				</article>
-			</div>
-		</div>
 	</article>
 
 
-
-
-
-
-
 	<footer class="footer">
-		<a href="index.html"> <img src="image/Urtekramlogo.svg" alt="urtekram" class="logobund"></a>
-		<article class="kontakt">
+		<a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
+		<article id="kontakt">
 			<h3>Kontakt</h3>
 			<h4>FAQ</h4>
 			<h4>Nyhedsbrev</h4>
@@ -256,15 +211,13 @@
 		</article>
 
 		<article class="social">
-			<h3> Sociale links</h3>
+			<h3 id="links"> Sociale links</h3>
 			<a href="http://www.facebook.dk">
-				<img src="image/.svg" alt="Urtekrams's facebook" id="facebook"></a>
+				<img src="image/facebooklogo.svg" alt="Urtekrams's facebook" id="facebook"></a>
 
 			<a href="http://www.instagram.dk">
-				<img src="image/.svg" alt="Urtekrams's instagram" id="instagram"></a>
+				<img src="image/instagramlogo.svg" alt="Urtekrams's instagram" id="instagram"></a>
 		</article>
-
-
 	</footer>
 
 
