--- a/Opskrifter.html
+++ b/Opskrifter.html
@@ -9,27 +9,181 @@
 	<meta name="description" content="Example">
 	<meta name="keywords" content="Mine opskrifter, login, inspiartion, mad, madopskrifter">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style1.css">
 
 	<!--ikon i faneblad / browser -->
 	<link rel="icon" type="image/x-icon" href="image/Urtekramlogo.svg" />
 </head>
 
-<body>
-<header>Velkommen til dine opskrifter</header>
-<section class="livretter">
-  <div>Familiens livretter</div>
-    <div>Hverdagsretter</div>
-      <div>Gaestemad</div>
-      <div>Online video</div>
-</section>
 
-<section>
- nr2
-</section>
+<body class="wrap">
+
+
+	<header>
+		<div class="menu">
+
+			<div class="dropdown">
+				<button class="dropbtn">Produkter</button>
+				<div class="dropdown-content">
+					<a href="#">bagning</a>
+					<a href="#">Dressing & saucer</a>
+					<a href="#">Drikkevarer</a>
+					<a href="#">Fond</a>
+					<a href="#">Frost</a>
+					<a href="#">Glutenfri</a>
+					<a href="#">Kolonial</a>
+					<a href="#">Krydderier</a>
+					<a href="#">Olie & eddike</a>
+					<a href="#">Snacks</a>
+				</div>
+			</div>
+
+			<div class="dropdown2">
+				<button class="dropbtn2">Opskrifter</button>
+				<div class="dropdown-content">
+					<a href="#">Familiefavoritter</a>
+					<a href="#">Italiensk</a>
+					<a href="#">Mexikansk</a>
+					<a href="#">Mad på 30 min</a>
+					<a href="#">Special kost</a>
+					<a href="#">Sæson</a>
+					<a href="#">Vegatarisk</a>
+					<a href="#">Østen</a>
+				</div>
+			</div>
+
+			<div class="dropdown3">
+				<button class="dropbtn3">Anledning</button>
+				<div class="dropdown-content">
+					<a href="#">Morgenmad</a>
+					<a href="#">Frokost</a>
+					<a href="#">Aftensmad</a>
+					<a href="#">Dessert</a>
+					<a href="#">Gæster</a>
+				</div>
+			</div>
+
+			<div class="dropdown4">
+				<button class="dropbtn4">Madkursus</button>
+				<div class="dropdown-content">
+					<a href="#">Kursuskalender</a>
+					<a href="#">Madlavningskursus</a>
+					<a href="#">Online Madlavningskursus</a>
+				</div>
+			</div>
+
+			<div class="dropdown5">
+				<button class="dropbtn5">Bæredygtighed</button>
+				<div class="dropdown-content">
+					<a href="#">Biodiversitet</a>
+					<a href="#">Inspirende innovationer</a>
+					<a href="#">Klima</a>
+					<a href="#">Økologi</a>
+				</div>
+			</div>
+
+			<div class="dropdown6">
+				<button class="dropbtn6">Om Urtekram</button>
+				<div class="dropdown-content">
+					<a href="#">Om os</a>
+				</div>
+			</div>
+		</div>
+
+
+	</header>
+
+	<!-- menupunkter -->
+
+
+
+
+	<!-- burgermenu -->
+	<!--
+		<div class="burgermenu">
+			<input id="dropdown" class="Tryk">
+			<label for="dropdown" class="dropdownnavbar"> ☰ </label>
+		</div>
+-->
+
+
+
+	<!-- logo -->
+	<div class="logotop">
+		<a href="http://www.urtekram.msfh.dk">
+			<img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
+	</div>
+
+	<!-- login-ikon -->
+	<img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
+
+	<div class="Tryk">
+	<button class="Tryk1">Mine opskrifter</button>
+</div>
+
+	<div id="hvid"></div>
+
+	<!--velkomst -->
+	<section id="velkommen">
+		<article class="personlig">
+			<h3 id="hilsen"> Velkommen til dine opskrifter</h3>
+			<h2 id="din"> God eftermiddag, Michelle</h2>
+		</article>
+	</section>
+
+	<!-- kasse 1 -->
+	<section id="familiens">
+		<article class="boks1">
+			<h2 id="FL">Familiens livretter</h2>
+		</article>
+	</section>
+
+	<!-- kasse2 -->
+	<section id="hverdag">
+		<article class="boks2">
+			<h2 id="HV">Hverdags mad</h2>
+		</article>
+	</section>
+
+	<!-- kasse3 -->
+	<section id="Gaeste">
+		<article class="boks3">
+			<h2 id="GM">Gæste mad</h2>
+		</article>
+	</section>
+
+	<!-- kasse4 -->
+	<section id="Online">
+		<article class="boks4">
+			<h2 id="video">Online Video</h2>
+		</article>
+	</section>
+
+
+	<!-- footer -->
+	<footer class="footer">
+		<a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
+		<article id="kontakt">
+			<h3>Kontakt</h3>
+			<h4>FAQ</h4>
+			<h4>Nyhedsbrev</h4>
+			<h4>Privatliv og Cookies</h4>
+		</article>
+
+		<article class="social">
+			<h3 id="links"> Sociale links</h3>
+			<a href="http://www.facebook.dk">
+				<img src="image/facebooklogo.svg" alt="Urtekrams's facebook" id="facebook"></a>
+
+			<a href="http://www.instagram.dk">
+				<img src="image/instagramlogo.svg" alt="Urtekrams's instagram" id="instagram"></a>
+		</article>
+	</footer>
 
 
 
 
 
 </body>
+
+</html>
