--- a/index.html
+++ b/index.html
@@ -30,66 +30,61 @@
 			<a href="#">Fond</a>
 			<a href="#">Frost</a>
 			<a href="#">Glutenfri</a>
+			<a href="#">Kolonial</a>
+			<a href="#">Krydderier</a>
+			<a href="#">Olie & eddike</a>
+			<a href="#">Snacks</a>
 		</div>
 	</div>
 
 	<div class="dropdown2">
 		<button class="dropbtn2">Opskrifter</button>
 		<div class="dropdown-content">
-			<a href="#">bagning</a>
-			<a href="#">Dressing & saucer</a>
-			<a href="#">Drikkevarer</a>
-			<a href="#">Fond</a>
-			<a href="#">Frost</a>
-			<a href="#">Glutenfri</a>
+			<a href="#">Familiefavoritter</a>
+			<a href="#">Italiensk</a>
+			<a href="#">Mexikansk</a>
+			<a href="#">Mad på 30 min</a>
+			<a href="#">Special kost</a>
+			<a href="#">Sæson</a>
+			<a href="#">Vegatarisk</a>
+			<a href="#">Østen</a>
 		</div>
 	</div>
 
 	<div class="dropdown3">
 		<button class="dropbtn3">Anledning</button>
 		<div class="dropdown-content">
-			<a href="#">bagning</a>
-			<a href="#">Dressing & saucer</a>
-			<a href="#">Drikkevarer</a>
-			<a href="#">Fond</a>
-			<a href="#">Frost</a>
-			<a href="#">Glutenfri</a>
+			<a href="#">Morgenmad</a>
+			<a href="#">Frokost</a>
+			<a href="#">Aftensmad</a>
+			<a href="#">Dessert</a>
+			<a href="#">Gæster</a>
 		</div>
 	</div>
 
 	<div class="dropdown4">
 		<button class="dropbtn4">Madkursus</button>
 		<div class="dropdown-content">
-			<a href="#">bagning</a>
-			<a href="#">Dressing & saucer</a>
-			<a href="#">Drikkevarer</a>
-			<a href="#">Fond</a>
-			<a href="#">Frost</a>
-			<a href="#">Glutenfri</a>
+			<a href="#">Kursuskalender</a>
+			<a href="#">Madlavningskursus</a>
+			<a href="#">Online Madlavningskursus</a>
 		</div>
 	</div>
 
 	<div class="dropdown5">
 		<button class="dropbtn5">Bæredygtighed</button>
 		<div class="dropdown-content">
-			<a href="#">bagning</a>
-			<a href="#">Dressing & saucer</a>
-			<a href="#">Drikkevarer</a>
-			<a href="#">Fond</a>
-			<a href="#">Frost</a>
-			<a href="#">Glutenfri</a>
+			<a href="#">Biodiversitet</a>
+			<a href="#">Inspirende innovationer</a>
+			<a href="#">Klima</a>
+			<a href="#">Økologi</a>
 		</div>
 	</div>
 
 	<div class="dropdown6">
 		<button class="dropbtn6">Om Urtekram</button>
 		<div class="dropdown-content">
-			<a href="#">bagning</a>
-			<a href="#">Dressing & saucer</a>
-			<a href="#">Drikkevarer</a>
-			<a href="#">Fond</a>
-			<a href="#">Frost</a>
-			<a href="#">Glutenfri</a>
+			<a href="#">Om os</a>
 		</div>
 	</div>
 		</div>
@@ -137,12 +132,12 @@
 <!-- Kogebog -->
 	<section class="a">
 		<article class="Minbog">
-			<h2> Design din egen kogebog</h2>
+			<h2 id="design"> Design din egen kogebog</h2>
 			<picture>
 				<img src="image/Minkogebog.JPG" alt="Kogebog" id="Kogebog">
 			</picture>
 			<p id="para">
-				og VIND et aars forbrug af Urtekrams Fettuccine<br><br>
+				VIND et års forbrug af Urtekrams Fettuccine<br><br>
 				<button class="deltag">Deltag her</button>
 			</p>
 		</article>
@@ -181,7 +176,7 @@
 					<h4 id="teasertekst1">Pasta Alfredo</h4>
 				</article>
 				<article class="Opskrift">
-					<h5> Få opskriften her</h5>
+					<h5 id="her1"> Få opskriften her</h5>
 				</article>
 			</div>
 
@@ -190,17 +185,19 @@
 				<article class="beskrivelse">
 					<picture>
 
-						<img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks" class="kortbillede">
+						<a href="#"><img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks" class="kortbillede">
 					</picture>
-					<h4>Pasta med laks</h4>
+					<h4 id=teasertekst3>Pasta med laks</h4>
 				</article>
 				<article class="Opskrift">
-					<h5> Få opskriften her</h5>
+					<h5 id="her3"> Få opskriften her</h5>
 				</article>
 			</div>
 	</article>
 
 
+
+<!-- footer -->
 	<footer class="footer">
 		<a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
 		<article id="kontakt">
