--- a/Fettuccine.html
+++ b/Fettuccine.html
@@ -104,24 +104,70 @@
   <!-- login-ikon -->
   <img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
 
-<section id="hvid"></section>
+  <section id="hvid"></section>
+
+  <!--mockupbillder -->
 
   <section class="beskrivelse">
     <picture>
-     <img id="mockup" src="image/produktmuckupforside.jpg" alt="produkt fettuccine">
+      <img id="mockup" src="image/produktmuckupforside.jpg" alt="produkt fettuccine">
     </picture>
   </section>
 
   <section class="beskrivelse1">
     <picture>
-     <img id="Mockupb" src="image/produktmockupbagside.jpg" alt="produkt fettuccine bagside">
+      <img id="Mockupb" src="image/produktmockupbagside.jpg" alt="produkt fettuccine bagside">
     </picture>
   </section>
 
-  <section id="blaa">
-      <h3 id="ingrediens">Ingredienser</h3>
-      <p id="Fettuccine">400 g Urtekram Fettuccine</p>
-      </section>
+  <section id="om">
+    <h3 id="ingrediens">Urtekram Fettuccine</h3>
+    <p id="Fettuccine">I Valle di Fiemme ved fodenden af bjergkæden Dolomitterne, har Felicetti familiens
+      produceret traditionel italiensk pasta i fire generationer.</p>
+    <p id="stoeber">Familien støber pastaen i bronzeforme, som giver den ru overflade.</p>
+    <p id="struktur">Strukturen på pastaen får saucerne til at hænge bedre fast og
+      gør dine retter mere creamet.</p>
+    <p id="selve">Selve pastaen er produceret af 100% italiensk durumhvedemel og det lokale
+      kildevand fra Dollomitterne. </p>
+  </section>
+
+
+  <!--retter med fettuccine -->
+
+  <section id="overskrift">
+    <h2 id="aftensmad">Få inspiration til din aftensmad her</h2>
+  </section>
+
+  <!-- Pasta Alfredo -->
+  <section class="teaser">
+    <article class="beskrivelse">
+      <picture>
+        <a href="#" "https://www.pasta.html"><img id="alfredo" src="image/PastaAlfredo.jpg" alt="Pasta Alfredo"></a>
+      </picture>
+      <h4 id="teasertekst1">Pasta Alfredo</h4>
+    </article>
+    <article class="Opskrift">
+    <a href="#" "https://www.pasta.html"><h5 id="her1"> Få opskriften her</h5></a>
+    </article>
+  </section>
+
+  <!-- Pasta med laks -->
+  <section class="teaser">
+    <article class="beskrivelse">
+      <picture>
+        <a href="#"><img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks"></a>
+      </picture>
+      <h4 id=teasertekst3>Pasta med laks</h4>
+    </article>
+    <article class="Opskrift">
+      <h5 id="her3"> Få opskriften her</h5>
+    </article>
+  </section>
+
+
+
+
+
 
 
   <!-- footer -->
