--- a/pasta.html
+++ b/pasta.html
@@ -98,11 +98,13 @@
   <!-- logo -->
   <div class="logotop">
     <a href="http://www.urtekram.msfh.dk">
-      <img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
+      <a href="#""https://www.index.html"><img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
   </div>
 
   <!-- login-ikon -->
   <img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
+
+
   <div id="blaa"></div>
   <div id="hvid"></div>
 
@@ -115,15 +117,15 @@
 
 
   <!-- Pasta Alfredo -->
-  <div class="teaser">
+  <section class="teaser">
     <article class="beskrivelse">
       <picture>
        <img id="alfredo" src="image/PastaAlfredo.jpg" alt="Pasta Alfredo">
       </picture>
     </article>
-  </div>
+  </section>
 
-<div id="blaa">
+<section id="blaa">
   <article class="personlig">
     <h3 id="ingrediens">Ingredienser</h3>
     <p id="Fettuccine">400 g Urtekram Fettuccine</p>
@@ -137,9 +139,9 @@
     <p id="servering">Til servering:</p>
     <p id="frisk">Frisk timian</p>
   </article>
-</div>
+</section>
 
-<div id="howtodo">
+<section id="howtodo">
   <article class="personlig1">
     <h3 id="alfredop">Pasta Alfredo</h3>
     <p id="kog">Kog pastaen i letsaltet vand.</p>
@@ -151,16 +153,16 @@
                 <p id="anret">Anret på tallerkener og drys med frisk timian.</p>
 
   </article>
-</div>
+</section>
 
-<div id="om">
+<section id="om">
   <article class="personlig2">
-    <p id="sovs">Alfredo saucer består kun af ost og fløde, derfor er det hurtigt blevet en familieklassiker, da det ingen tid tager at lave i en travl hverdag</p>
-    <p id="">1 dl. pastavand</p>
-    <p id="">1 dl. fløde</p>
-
+    <p id="sovs">Alfredo saucer består kun af ost og fløde, derfor er det hurtigt blevet en familieklassiker, da det ingen tid tager, at lave i en travl hverdag</p>
+    <p id="retten">Retten hedder på italiensk Fettuccine Al Burro, som betyder Fettuccine med smør, da der i den originale opskriften,
+             hverken er ost eller fløde i.</p>
+    <p id="cremet">Med Urtekram Fettuccine bliver retten hutigt ekstra lækker og cremet. Tag forklædet på, og børnene med i køkkenet til en italiensk oplevelse</p>
   </article>
-</div>
+</section>
 
 
 
