--- a/index.html
+++ b/index.html
@@ -18,212 +18,203 @@
 <body class="wrap">
 
 
-<header>
-	<div class="menu">
+	<header>
+		<div class="menu">
 
-	<div class="dropdown">
-		<button class="dropbtn">Produkter</button>
-		<div class="dropdown-content">
-			<a href="#">Bagning</a>
-			<a href="#">Dressing & saucer</a>
-			<a href="#">Drikkevarer</a>
-			<a href="#">Fond</a>
-			<a href="#">Frost</a>
-			<a href="#">Glutenfri</a>
-			<a href="#">Kolonial</a>
-			<a href="#">Krydderier</a>
-			<a href="#">Olie & eddike</a>
-			<a href="#">Snacks</a>
-		</div>
-	</div>
+			<div class="dropdown">
+				<button class="dropbtn">Produkter</button>
+				<div class="dropdown-content">
+					<a href="#">Bagning</a>
+					<a href="#">Dressing & saucer</a>
+					<a href="#">Drikkevarer</a>
+					<a href="#">Fond</a>
+					<a href="#">Frost</a>
+					<a href="#">Glutenfri</a>
+					<a href="#">Kolonial</a>
+					<a href="#">Krydderier</a>
+					<a href="#">Olie & eddike</a>
+					<a href="#">Snacks</a>
+				</div>
+			</div>
 
-	<div class="dropdown2">
-		<button class="dropbtn2">Opskrifter</button>
-		<div class="dropdown-content">
-			<a href="#">Familiefavoritter</a>
-			<a href="#">Italiensk</a>
-			<a href="#">Mexikansk</a>
-			<a href="#">Mad på 30 min</a>
-			<a href="#">Special kost</a>
-			<a href="#">Sæson</a>
-			<a href="#">Vegatarisk</a>
-			<a href="#">Østen</a>
-		</div>
-	</div>
+			<div class="dropdown2">
+				<button class="dropbtn2">Opskrifter</button>
+				<div class="dropdown-content">
+					<a href="#">Familiefavoritter</a>
+					<a href="#">Italiensk</a>
+					<a href="#">Mexikansk</a>
+					<a href="#">Mad på 30 min</a>
+					<a href="#">Special kost</a>
+					<a href="#">Sæson</a>
+					<a href="#">Vegatarisk</a>
+					<a href="#">Østen</a>
+				</div>
+			</div>
 
-	<div class="dropdown3">
-		<button class="dropbtn3">Anledning</button>
-		<div class="dropdown-content">
-			<a href="#">Morgenmad</a>
-			<a href="#">Frokost</a>
-			<a href="#">Aftensmad</a>
-			<a href="#">Dessert</a>
-			<a href="#">Gæster</a>
-		</div>
-	</div>
+			<div class="dropdown3">
+				<button class="dropbtn3">Anledning</button>
+				<div class="dropdown-content">
+					<a href="#">Morgenmad</a>
+					<a href="#">Frokost</a>
+					<a href="#">Aftensmad</a>
+					<a href="#">Dessert</a>
+					<a href="#">Gæster</a>
+				</div>
+			</div>
 
-	<div class="dropdown4">
-		<button class="dropbtn4">Madkursus</button>
-		<div class="dropdown-content">
-			<a href="#">Kursuskalender</a>
-			<a href="#">Madlavningskursus</a>
-			<a href="#">Online Madlavningskursus</a>
-		</div>
-	</div>
+			<div class="dropdown4">
+				<button class="dropbtn4">Madkursus</button>
+				<div class="dropdown-content">
+					<a href="#">Kursuskalender</a>
+					<a href="#">Madlavningskursus</a>
+					<a href="#">Online Madlavningskursus</a>
+				</div>
+			</div>
 
-	<div class="dropdown5">
-		<button class="dropbtn5">Bæredygtighed</button>
-		<div class="dropdown-content">
-			<a href="#">Biodiversitet</a>
-			<a href="#">Inspirende innovationer</a>
-			<a href="#">Klima</a>
-			<a href="#">Økologi</a>
-		</div>
-	</div>
+			<div class="dropdown5">
+				<button class="dropbtn5">Bæredygtighed</button>
+				<div class="dropdown-content">
+					<a href="#">Biodiversitet</a>
+					<a href="#">Inspirende innovationer</a>
+					<a href="#">Klima</a>
+					<a href="#">Økologi</a>
+				</div>
+			</div>
 
-	<div class="dropdown6">
-		<button class="dropbtn6">Om Urtekram</button>
-		<div class="dropdown-content">
-			<a href="#">Om os</a>
-		</div>
-	</div>
-		</div>
-
-
-</header>
-
-<!-- menupunkter -->
-
-
-
-
-<!-- burgermenu -->
-<!--
-		<div class="burgermenu">
-			<input id="dropdown" class="Tryk">
-			<label for="dropdown" class="dropdownnavbar"> ☰ </label>
-		</div>
--->
-
-
-
-<!-- logo -->
-		<div class="logotop">
-			<a href="http://www.urtekram.msfh.dk">
-				<img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
+			<div class="dropdown6">
+				<button class="dropbtn6">Om Urtekram</button>
+				<div class="dropdown-content">
+					<a href="#">Om os</a>
+				</div>
+			</div>
 		</div>
 
-<!-- login-ikon -->
-		<a href="https://www.Opskrifter.html.dk"<img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
-			<div id="blaa"></div>
-				<div id="hvid"></div>
+
+	</header>
+
+	<!-- menupunkter -->
 
 
-<!-- Emballagebillede -->
-			<a href=".html"> <img src="image/produktmuckupforside.jpg" alt="Mockup" id="Mockup"></a>
 
 
-<!-- Artikel -->
-	<article id="Fettuccine">
-		<p id="em">Her hos Urtekram elsker vi pasta,</p>
-		<p id="overraskelse">og det kan ikke komme som nogle overraskelse,
-			at der tit i løbet af vores uge kommer pasta på bordet.</p>
-	</article>
+	<!-- burgermenu -->
 
-<!-- Kogebog -->
-	<section class="a">
-		<article class="Minbog">
-			<h2 id="design"> Design din egen kogebog</h2>
-			<picture>
-				<img src="image/Minkogebog.JPG" alt="Kogebog" id="Kogebog">
-			</picture>
-			<p id="para">
-				VIND et års forbrug af Urtekrams Fettuccine<br><br>
-				<button class="deltag">Deltag her</button>
-			</p>
+	<div class="burgermenu">
+		<input id="dropdown" class="Tryk" type="checkbox">
+		<label for="dropdown" class="dropdownnavbar"> ☰ </label>
+	</div> 
+
+
+
+	<!-- logo -->
+	<section class="logotop">
+		<a href="http://www.urtekram.msfh.dk">
+			<img id="logotop" src="image/Urtekramlogo.svg" alt="Urtekram Fettuccine"></a>
+	</section>
+
+	<!-- login-ikon -->
+	<a href="https://www.Opskrifter.html.dk" <img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
+		<div id="blaa"></div>
+		<section id="hvid"></section>
+
+
+		<!-- Emballagebillede -->
+		<a href=".html"> <img src="image/produktmuckupforside.jpg" alt="Mockup" id="Mockup"></a>
+
+
+		<!-- Artikel -->
+		<article id="Fettuccine">
+			<p id="em">Her hos Urtekram elsker vi pasta,</p>
+			<p id="overraskelse">og det kan ikke komme som nogle overraskelse,
+				at der tit i løbet af vores uge kommer pasta på bordet.</p>
 		</article>
-	</section>
 
-<!-- Glutenfri pastakursus -->
-	<section class="Glutenfri">
+		<!-- Kogebog -->
+		<section class="a">
+			<article class="Minbog">
+				<h2 id="design"> Design din egen kogebog</h2>
+				<picture>
+					<img src="image/Minkogebog.JPG" alt="Kogebog" id="Kogebog">
+				</picture>
+				<p id="para">
+					VIND et års forbrug af Urtekrams Fettuccine<br><br>
+					<button class="deltag">Deltag her</button>
+				</p>
+			</article>
+		</section>
 
-		<h2> Glutenfri pastakursus </h2>
-	</section>
+		<!-- Glutenfri pastakursus -->
+		<section class="Glutenfri">
+
+			<h2> Glutenfri pastakursus </h2>
+		</section>
 
 
-<!-- Familiefavoritter -->
-	<article class="nyheder">
-		<h2> Familiefavoritter</h2>
-	</article>
+		<!-- Familiefavoritter -->
+		<article class="nyheder">
+			<h2> Familiefavoritter</h2>
+		</article>
 
 		<!-- Aeggekage laks -->
-			<div class="teaser">
-				<article class="beskrivelse">
-					<picture>
-						<a href="#"><img id="laks" src="image/Aeggekagelaks.png" alt="Opskrift på aeggekage"></a>
-					</picture>
-					<h4 id="teasertekst2">Æggekage med laks</h4>
-				</article>
-				<article class="Opskrift">
-					<h5 id="her"> Få opskriften her </h5>
-				</article>
-			</div>
+		<section class="teaser">
+			<article class="beskrivelse">
+				<picture>
+					<a href="#"><img id="laks" src="image/Aeggekagelaks.png" alt="Opskrift på aeggekage"></a>
+				</picture>
+				<h4 id="teasertekst2">Æggekage med laks</h4>
+			</article>
+			<article class="Opskrift">
+				<h5 id="her"> Få opskriften her </h5>
+			</article>
+		</section>
 
 		<!-- Pasta Alfredo -->
-			<div class="teaser">
-				<article class="beskrivelse">
-					<picture>
+		<section class="teaser">
+			<article class="beskrivelse">
+				<picture>
 					<a href="#"><img id="alfredo" src="image/PastaAlfredo.jpg" alt="Pasta Alfredo"></a>
-					</picture>
-					<h4 id="teasertekst1">Pasta Alfredo</h4>
-				</article>
-				<article class="Opskrift">
-					<a href="#" "https://www.pasta.html.dk"<h5 id="her1"> Få opskriften her</h5></a>
-				</article>
-			</div>
+				</picture>
+				<h4 id="teasertekst1">Pasta Alfredo</h4>
+			</article>
+			<article class="Opskrift">
+				<a href="#" "https://www.pasta.html.dk" <h5 id="her1"> Få opskriften her</h5></a>
+			</article>
+		</section>
 
-			<!-- Pasta med laks -->
-			<div class="teaser">
-				<article class="beskrivelse">
-					<picture>
-         	<a href="#"><img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks"></a>
-					</picture>
-					<h4 id=teasertekst3>Pasta med laks</h4>
-				</article>
-				<article class="Opskrift">
-					<h5 id="her3"> Få opskriften her</h5>
-				</article>
-			</div>
-
-
-
-
-<!-- footer -->
-	<footer class="footer">
-		<a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
-		<article id="kontakt">
-			<h3>Kontakt</h3>
-			<h4>FAQ</h4>
-			<h4>Nyhedsbrev</h4>
-			<h4>Privatliv og Cookies</h4>
-		</article>
-
-		<article class="social">
-			<h3 id="links"> Sociale links</h3>
-			<a href="http://www.facebook.dk">
-				<img src="image/facebooklogo.svg" alt="Urtekrams's facebook" id="facebook"></a>
-
-			<a href="http://www.instagram.dk">
-				<img src="image/instagramlogo.svg" alt="Urtekrams's instagram" id="instagram"></a>
-		</article>
-	</footer>
+		<!-- Pasta med laks -->
+		<section class="teaser">
+			<article class="beskrivelse">
+				<picture>
+					<a href="#"><img id="pastalaks" src="image/pastamedlaks.jpg" alt="Pasta med laks"></a>
+				</picture>
+				<h4 id=teasertekst3>Pasta med laks</h4>
+			</article>
+			<article class="Opskrift">
+				<h5 id="her3"> Få opskriften her</h5>
+			</article>
+		</section>
 
 
 
 
+		<!-- footer -->
+		<footer class="footer">
+			<a href="index.html"> <img id="logobund" src="image/Urtekramlogo.svg" alt="urtekram"></a>
+			<article id="kontakt">
+				<h3>Kontakt</h3>
+				<h4>FAQ</h4>
+				<h4>Nyhedsbrev</h4>
+				<h4>Privatliv og Cookies</h4>
+			</article>
 
+			<article class="social">
+				<h3 id="links"> Sociale links</h3>
+				<a href="http://www.facebook.dk">
+					<img src="image/facebooklogo.svg" alt="Urtekrams's facebook" id="facebook"></a>
 
-
-
+				<a href="http://www.instagram.dk">
+					<img src="image/instagramlogo.svg" alt="Urtekrams's instagram" id="instagram"></a>
+			</article>
+		</footer>
 
 </html>
