--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<header>
 		<div class="menu">
 
-			<div class="dropdown">
+			<section class="dropdown">
 				<button class="dropbtn">Produkter</button>
 				<div class="dropdown-content">
 					<a href="#">Bagning</a>
@@ -35,7 +35,7 @@
 					<a href="#">Olie & eddike</a>
 					<a href="#">Snacks</a>
 				</div>
-			</div>
+			</section>
 
 			<div class="dropdown2">
 				<button class="dropbtn2">Opskrifter</button>
@@ -102,7 +102,7 @@
 	<div class="burgermenu">
 		<input id="dropdown" class="Tryk" type="checkbox">
 		<label for="dropdown" class="dropdownnavbar"> ☰ </label>
-	</div> 
+	</div>
 
 
 
@@ -113,13 +113,13 @@
 	</section>
 
 	<!-- login-ikon -->
-	<a href="https://www.Opskrifter.html.dk" <img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
+	<a href="https://www.Opskrifter.html.dk"> <img src="image/Mineopskrifter.svg" alt="Mine opskrifter" id="mine">
 		<div id="blaa"></div>
 		<section id="hvid"></section>
 
 
 		<!-- Emballagebillede -->
-		<a href=".html"> <img src="image/produktmuckupforside.jpg" alt="Mockup" id="Mockup"></a>
+		<a href=".html"><img src="image/produktmuckupforside.jpg" alt="Mockup" id="Mockup"></a>
 
 
 		<!-- Artikel -->
@@ -159,7 +159,7 @@
 		<section class="teaser">
 			<article class="beskrivelse">
 				<picture>
-					<a href="#"><img id="laks" src="image/Aeggekagelaks.png" alt="Opskrift på aeggekage"></a>
+					<img id="laks" src="image/Aeggekagelaks.png" alt="Opskrift på aeggekage">
 				</picture>
 				<h4 id="teasertekst2">Æggekage med laks</h4>
 			</article>
@@ -177,7 +177,7 @@
 				<h4 id="teasertekst1">Pasta Alfredo</h4>
 			</article>
 			<article class="Opskrift">
-				<a href="#" "https://www.pasta.html.dk" <h5 id="her1"> Få opskriften her</h5></a>
+				<a href="#""https://www.pasta.html.dk"><h5 id="her1">Få opskriften her</h5></a>
 			</article>
 		</section>
 
